# ai-art-detector

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: experiment.yaml  experiment_anime_fanart_v2_transfer.yaml  experiment_anime_fanart_v3_transfer.yaml  experiment_anime_fanart_v4_transfer.yaml  experiment_anime_social_transfer.yaml  experiment_improved.yaml  experiment_real_art_hf.yaml  experiment_real_art_hf_improved.yaml  experiment_sample_guarded_broad_from_real.yaml  experiment_sample_guarded_broad_head.yaml  experiment_sample_guarded_broader_from_real.yaml  experiment_sample_guarded_human_aug_head.yaml  experiment_sample_guarded_human_aug_transfer.yaml  experiment_sample_guarded_mixed_imagenet_full.yaml  experiment_sample_guarded_mixed_imagenet_head.yaml  experiment_sample_guarded_mixed_resnet18.yaml  experiment_sample_guarded_mixed_transfer.yaml  experiment_sample_guarded_real_head.yaml  experiment_sample_guarded_real_transfer.yaml  experiment_smoke.yaml
data/: README.md
docker/: Dockerfile.demo
scripts/: download_anime_dataset.py  download_anime_fanart_dataset.py  download_anime_fanart_v3_dataset.py  download_anime_fanart_v4_dataset.py  download_real_dataset.py  evaluate.py  export_onnx.py  generate_smoke_dataset.py  predict.py  prepare_data.py  run_api.py  run_demo.py  train.py
tests/: test_api.py  test_config.py  test_downloaders.py  test_env.py  test_evaluation_pipeline.py  test_metrics.py  test_preparation.py  test_sample_benchmark.py  test_training_pipeline.py
(+70 files in other folders)
